fix(pageHeading): fix spacing on lower border
#370

--- a/src/components/PageHeading.module.scss
+++ b/src/components/PageHeading.module.scss
@@ -182,7 +182,7 @@
     box-sizing: border-box;
     width: calc(100% - 56px);
     margin: 35px auto 30px;
-    padding-bottom: 0;
+    padding-bottom: 25px;
     
     &.has-separator-without-icon {
       margin: 35px auto 30px;
